# sfml-game

./: .gitignore  CMakeLists.txt  README.md
documents/: Stickman_SpriteSheet.xcf  functionalSpecifications.md  technicalSpecifications.md
src/: main.cpp
src/class/: Collectable.cc  Enemy.cc  Game.cc  Game.hpp  Item.cc  Platform.cc  Platform.hpp  Player.cc  Text.cc  Weapon.cc  character.cc
src/class/characters/: Character.cc  Character.hpp  Enemy.cc  Enemy.hpp  Player.cc  Player.hpp
src/class/display/: Text.cc  Text.hpp
src/class/items/: Collectable.cc  Collectable.hpp  Item.cc  Item.hpp  Weapon.cc  Weapon.hpp
src/includes/: main.h  main.hpp  menu.cc  path.h  path.hpp
